--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     </header>
     <main>
         <h2>O que é?</h2>
-        <p>Guided Learning Group: Design System (GLG-DS) é um grupo de estudo para <u>designers</u> que queiram estudar e aprender mais sobre design system, desde os temas mais introdutórios aos mais complexos. O grupo será guiado pelo Designer  <a href="https://www.linkedin.com/in/tuxu/" target="_blank">Tuxu</a> e algumas pessoas convidadas que trabalham com DS no dia a dia.
+        <p>Guided Learning Group: Design System (GLG-DS) é um grupo de estudo para <u>designers</u> que queiram estudar e aprender mais sobre design system, desde os temas mais introdutórios aos mais complexos. O grupo será guiado pelo designer  <a href="https://www.linkedin.com/in/tuxu/" target="_blank">Tuxu</a> e algumas pessoas convidadas que trabalham com DS no dia a dia.
         </p>
         <br>
         <h2>O que vamos aprender?</h2>
-        <p>O tema é de fato um pouco complexo, então vamos explorar desde as arquiteturas mais simples às mais complexas, iremos trabalhar com muitas referências, debates e exercícios práticos. Veja alguns dos temas que abordaremos:
+        <p>O tema é de fato um pouco complexo, então vamos explorar desde as arquiteturas mais simples às mais complexas. Iremos trabalhar com muitas referências, debates e exercícios práticos. Veja alguns dos temas que abordaremos:
         </p>
         <br>
         <ul>
@@ -63,7 +63,7 @@
         <p>Cada grupo de estudo terá 4 encontros e o primeiro grupo iniciará no dia 6 de fevereiro. Nossos encontros serão via Google Meet todas as segundas-feiras <u>das 19:30 às 21:30.</u></p>
         <br>
         <h2>Quanto custa?</h2>
-        <p>Esse projeto sempre será <u>gratuito.</u></p>
+        <p>Esse projeto é e sempre será <u>gratuito.</u></p>
         <br>
         <a href="http://bit.ly/3GIvy81" target="_blank" class="button">Inscreva-se</a>
     </main>
