--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta itemprop="description" content="Junte-se ao nosso grupo de estudo guiado sobre Design System! Com atividades práticas e discussões teóricas aprenderemos a desbravar a complexidade desse tema.">
     <meta itemprop="image" content="https://i.imgur.com/BSNob5N.png">
 
-    <meta property="og:url" content="https://tuxu.design">
+    <meta property="og:url" content="https://designsystem.group/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Guided learning group: Design System">
     <meta property="og:description" content="Junte-se ao nosso grupo de estudo guiado sobre Design System! Com atividades práticas e discussões teóricas aprenderemos a desbravar a complexidade desse tema.">
