Subscription button removed

--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
         <h2>Quanto custa?</h2>
         <p>Esse projeto é e sempre será <u>gratuito.</u></p>
         <br>
-        <a href="http://bit.ly/3GIvy81" target="_blank" class="button">Inscreva-se</a>
+        <div class="banner">
+            <h2>Inscrições Encerradas</h2>
+            <p>É muito gratificante saber que tivemos mais de 600 pessoas impactadas e interessadas em fazer parte desse grupo de estudo, em breve voltaremos com as inscrições e com mais novidades.</p>
+        </div>
     </main>
 </body>
 </html>
