--- a/index.html
+++ b/index.html
@@ -23,11 +23,8 @@
     <meta name="twitter:title" content="Guided learning group: Design System">
     <meta name="twitter:description" content="Junte-se ao nosso grupo de estudo guiado sobre Design System! Com atividades práticas e discussões teóricas aprenderemos a desbravar a complexidade desse tema.">
     <meta name="twitter:image" content="https://i.imgur.com/BSNob5N.png">
-
     <link rel="stylesheet" href="main.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&family=Inter:wght@500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&family=Inter:wght@500;700&display=swap" media="print" onload="this.media='all'"/>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
